instance.tf
resource "aws_instance" "example" {
  ami           = "${lookup(var.AMIS, var.AWS_REGION)}"
  instance_type = "t2.micro"

  # the VPC subnet
  subnet_id = "${aws_subnet.main-public-1.id}"

  # the security group
  vpc_security_group_ids = ["${aws_security_group.allow-ssh.id}"]
  vpc_security_group_ids = ["${aws_security_group.example-instance.id}"]


  # the public SSH key
  key_name = "${aws_key_pair.mykey.key_name}"

 # role:
  iam_instance_profile = "${aws_iam_instance_profile.s3-mybucket-role-instanceprofile.name}"

  # user data
  user_data = "${data.template_cloudinit_config.cloudinit-example.rendered}"

}
